# iaxmon

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  NATS.md  PROTOCOL.md  README.md  config.example.toml  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: docker-publish.yml
src/: config.rs  main.rs  nats.rs  session.rs  transport.rs
src/audio/: activity.rs  jitter.rs  mod.rs  player.rs  resample.rs  ulaw.rs
src/proto/: conformance.rs  consts.rs  frame.rs  ie.rs  mod.rs
