[package]
name = "iaxmon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-nats = "0.49.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.1", features = ["derive"] }
cpal = "0.18.1"
futures-util = "0.3.32"
md-5 = "0.11.0"
ringbuf = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
